# src/openapi/requests/models/ScreeningWithoutFilm.ts
@@ -1,10 +1,0 @@
-/* istanbul ignore file */
-/* tslint:disable */
-/* eslint-disable */
-
-export type ScreeningWithoutFilm = {
-    projectionType?: string;
-    resolution?: string;
-    date?: string;
-    room?: number;
-};
